--- a/FrontEnd/styles.css
+++ b/FrontEnd/styles.css
@@ -1,189 +1,346 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+/* Header styles */
+:root
+{
+    --navbar-height: 4rem;
 }
 
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+header
+{
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 
-header .logo img {
-  height: 50px;
+.logo img
+{
+    max-width: 100px;
+    margin: auto;
+    margin-block: 1em;
 }
 
-nav ul {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
+nav
+{
+    background-color: #000000;
+    height: var(--navbar-height);
+    display: grid;
+    align-items: center;
 }
 
-nav ul li {
-  margin-right: 20px;
+nav ul
+{
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
 }
 
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  padding: 10px;
+nav ul li
+{
+    margin: 0 15px;
 }
 
-.hero {
-  background-image: url("hero-img.gif");
-  background-size: contain;
-  color: #fff;
-  text-align: center;
-  padding: 100px 20px;
+nav ul li a
+{
+    color: var(--body-color);
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    display: block;
+    border-radius: 4px;
 }
 
-.hero .cta-buttons .btn {
-  background-color: #ff5733;
-  color: #fff;
-  padding: 10px 20px;
-  margin: 10px;
-  text-decoration: none;
-  border-radius: 5px;
+nav ul li a:hover
+{
+    background-color: var(--body-color);
+    color: black;
+    transition: background-color 250ms ease-in, color 250ms ease-in;
 }
 
-section {
-  padding: 60px 20px;
-  text-align: center;
+/* Dropdown menu */
+.dropdown
+{
+    position: relative;
 }
 
-section img {
-  max-width: 100%;
-  height: auto;
+.dropdown-content
+{
+    display: none;
+    position: absolute;
+    top: 110%;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    z-index: 1;
 }
 
-.features-grid {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+.dropdown-content a
+{
+    color: black;
+    padding: 12px 16px;
+    background-color: var(--body-color);
+    text-decoration: none;
+    border-radius: 4px;
+    text-align: left;
 }
 
-.feature-item {
-  width: 200px;
-  margin: 10px;
-  text-align: center;
+.dropdown-content a:is(:hover, :focus, :focus-within)
+{
+    background-color: var(--accent-color-hover);
+    color: var(--body-color);
 }
 
-.role-icons {
-  display: flex;
-  justify-content: center;
+.dropdown:is(:hover, :focus, :focus-within) .dropdown-content
+{
+    display: grid;
+    gap: 0.25rem;
 }
 
-.role {
-  margin: 20px;
-  text-align: center;
+/* Styles for the banner image in the hero section */
+#hero
+{
+    background: url('images/banner2.jpg') no-repeat center center/cover;
+    height: calc(100svh - var(--navbar-height));
+    height: calc(100vh - var(--navbar-height));
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
-.contact form {
-  display: flex;
-  flex-direction: column;
-  max-width: 400px;
-  margin: 0 auto;
+.hero-overlay
+{
+    position: relative;
+    display: grid;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 4rem 6rem;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    transition: background-color 500ms ease-in-out;
 }
 
-.contact form input,
-.contact form textarea {
-  margin: 10px 0;
-  padding: 10px;
-  border: 1px solid #ccc;
+.hero-overlay:hover
+{
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
-.contact form button {
-  padding: 10px;
-  background-color: #ff5733;
-  color: #fff;
-  border: none;
-  cursor: pointer;
+
+/* .hero-overlay::before
+{
+    content: "helloguys";
+    position: absolute;
+    inset: 0;
+    background-color: #00000010;
+} */
+
+.hero-overlay h1
+{
+    font-size: 2.5rem;
 }
 
-footer {
-  background-color: #333;
-  color: #fff;
-  padding: 20px 0;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+.hero-overlay p
+{
+    font-size: 1.2rem;
+    color: #b0b0b0;
 }
 
-footer .quick-links,
-footer .social-media,
-footer .newsletter {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.hero-buttons
+{
+    margin-block-start: 1.5em;
+    display: flex;
+    gap: 1em;
+    justify-content: center;
 }
 
-footer .newsletter input {
-  padding: 10px;
-  margin-bottom: 10px;
+.btn
+{
+    border: none;
+    background-color: var(--accent-color);
+    color: white;
+    padding: 1em 2em;
+    text-decoration: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-footer .newsletter button {
-  padding: 10px;
-  background-color: #ff5733;
-  color: #fff;
-  border: none;
-  cursor: pointer;
+.btn:hover
+{
+    background-color: var(--accent-color-hover);
 }
 
-/* Login Form Styles */
-.login-body {
-  background-image: url("login-image.jpg"); /* Add your background image URL */
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+/* About section */
+#about,
+#services,
+#gallery,
+#contact
+{
+    padding-block: 3em;
+    text-align: center;
 }
 
-.container {
-  width: 100%;
-  max-width: 400px;
-  padding: 20px;
-  background-color: transparent;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+h2
+{
+    font-size: 2rem;
+    margin-block-end: 1em;
 }
 
-.login-form {
-  display: flex;
-  flex-direction: column;
+#about
+{
+    padding-block: 3em;
+    text-align: center;
 }
 
-h2 {
-  text-align: center;
+.about-container
+{
+    max-width: 80ch;
+    margin: 0 auto;
 }
 
-label {
-  margin-bottom: 5px;
+.about-container p
+{
+    margin-block-end: 0.5rem;
 }
 
-input {
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+/* Services */
+
+#services
+{
+    padding-block: 3em;
+    text-align: center;
+    background-color: var(--white);
 }
 
-button {
-  padding: 10px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+.services-container
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 20rem), 1fr));
+    gap: 1.5em;
+    margin-inline: 4em;
 }
 
-button:hover {
-  background-color: #0056b3;
+.service
+{
+    text-align: center;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+    transition: transform 250ms;
+}
+
+.service img
+{
+    width: 60px;
+    height: 60px;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.service h3
+{
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.service p
+{
+    font-size: 1rem;
+    color: #666;
+}
+
+.service:hover
+{
+    transform: scale(1.05);
+}
+
+/* Gallery */
+.gallery
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
+    margin-inline: 4em;
+    gap: 1em;
+}
+
+.gallery img
+{
+    width: 100%;
+    aspect-ratio: 4/3;
+    object-fit: cover;
+    border-radius: 4px;
+    transition: filter 250ms ease-in-out;
+}
+
+.gallery img:hover
+{
+    filter: brightness(90%) contrast(110%);
+}
+
+/* Contact form */
+
+#contact
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2em;
+    background-color: var(--white);
+    padding-inline: 4em;
+}
+
+form
+{
+    margin: 0 auto;
+    text-align: left;
+}
+
+form label
+{
+    display: block;
+    margin-bottom: 5px;
+}
+
+form input,
+form textarea
+{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+form button
+{
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
+/* Adjust the styles for the map container as needed */
+.map iframe
+{
+    width: 100%;
+    height: 100%;
+}
+
+/* Footer styles */
+footer
+{
+    background-color: #333;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.footer-links a
+{
+    color: white;
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+.footer-links a:hover
+{
+    text-decoration: underline;
 }
