--- a/FrontEnd/add-cug.css
+++ b/FrontEnd/add-cug.css
@@ -12,7 +12,7 @@ main
     margin: 4rem;
 }
 
-.from_contener
+.form_container
 {
     position: relative;
     width: 70vw;
@@ -27,7 +27,12 @@ main
     transition: background-color 500ms ease-in-out;
 }
 
-.from_contener>section,
+.form_container:is(:hover, :focus, :focus-within, :focus-visible)
+{
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.form_container>section,
 .long-input
 {
     grid-column: 1/3;
@@ -71,6 +76,7 @@ select
     padding: 0.5em;
     border: none;
     border-radius: 4px;
+    background-color: #eee;
 }
 
 .input_box input:is(:focus, :valid)
@@ -78,7 +84,7 @@ select
     outline: 2px solid var(--accent-color);
 }
 
-.activate_button
+.submit-button
 {
     grid-column: 1/3;
     padding: 0.75em 2em;
@@ -94,7 +100,7 @@ select
     background-position: 0% 0%;
 }
 
-.activate_button:hover
+.submit-button:hover
 {
     background-position: 100% 100%;
 }
