--- a/FrontEnd/styles.css
+++ b/FrontEnd/styles.css
@@ -96,7 +96,7 @@ nav ul li a:hover
 /* Styles for the banner image in the hero section */
 #hero
 {
-    background: url('images/banner2.jpg') no-repeat center center/cover;
+    background: url('images/photo2.webp') no-repeat center center/cover;
     height: calc(100svh - var(--navbar-height));
     height: calc(100vh - var(--navbar-height));
     color: white;
