add cug backend implemented

--- a/FrontBack/base.css
+++ b/FrontBack/base.css
@@ -15,6 +15,7 @@
 	--accent-color: #4c4caf;
 	--accent-color-hover: #3c3c86;
 	--white: #FFF;
+	--black: #222;
 	/* --text-color-dark: #292929; */
 	/* --text-color: #e6e6e6; */
 	/* --accent-primary: #6B71F2; */
