--- a/FrontBack/create-dealer.css
+++ b/FrontBack/create-dealer.css
@@ -31,23 +31,52 @@ main
 #create-dealer
 {
     color: var(--white);
-    padding: 3em 0;
+    padding: 3em;
 }
 
-#create-dealer h2
+.heading-container
 {
-    font-size: 2rem;
-    margin-bottom: 1em;
+    display: grid;
+    grid-template-columns: 2.5rem 1fr 2.5rem;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-block-end: 1rem;
+}
+
+.back-btn
+{
+    padding: 0.5rem;
+    width: 2.5rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 999px;
+    background-color: var(--white);
+    aspect-ratio: 1;
+}
+
+
+.heading
+{
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-align: left;
+    color: var(--white);
     text-align: center;
-    text-transform: uppercase;
+    justify-self: center;
 }
 
 .session-message
 {
     text-align: center;
     color: var(--white);
+    font-weight: bold;
     margin-block: 1rem;
-    text-shadow: 0 0 4px black;
+    padding: 0.5rem 1rem;
+    background-color: var(--accent-color);
+    width: max-content;
+    margin-inline: auto;
+    border-radius: 4px;
 }
 
 .form_container
