--- a/FrontBack/upload-numbers.css
+++ b/FrontBack/upload-numbers.css
@@ -31,16 +31,38 @@ main
 #create-dealer
 {
     color: var(--white);
-    padding: 3em 0;
+    padding: 3em;
+}
+.heading-container
+{
+    display: grid;
+    grid-template-columns: 2.5rem 1fr 2.5rem;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-block-end: 1rem;
 }
 
-#create-dealer h2
+.back-btn
 {
-    font-size: 2rem;
-    margin-bottom: 1em;
+    padding: 0.5rem;
+    width: 2.5rem;
+    border-radius: 999px;
+    border: none;
+    cursor: pointer;
+    background-color: var(--white);
+    aspect-ratio: 1;
+}
+
+
+.heading
+{
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-align: left;
+    color: var(--white);
     text-align: center;
-    text-transform: uppercase;
-	text-shadow: 0 0 20px black;
+    justify-self: center;
 }
 
 .form_container
