--- a/FrontBack/add-cug.css
+++ b/FrontBack/add-cug.css
@@ -12,6 +12,51 @@ main
     margin: 4rem;
 }
 
+.heading-container
+{
+    display: grid;
+    grid-template-columns: 2.5rem 1fr 2.5rem;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-block-end: 1rem;
+}
+
+.back-btn
+{
+    padding: 0.5rem;
+    width: 2.5rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 999px;
+    background-color: var(--white);
+    aspect-ratio: 1;
+}
+
+
+.heading
+{
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-align: left;
+    color: var(--white);
+    text-align: center;
+    justify-self: center;
+}
+
+.session-message
+{
+    text-align: center;
+    color: var(--white);
+    font-weight: bold;
+    margin-block: 1rem;
+    padding: 0.5rem 1rem;
+    background-color: var(--accent-color);
+    width: max-content;
+    margin-inline: auto;
+    border-radius: 4px;
+}
+
 .form_container
 {
     position: relative;
@@ -36,16 +81,6 @@ main
 .long-input
 {
     grid-column: 1/3;
-}
-
-.heading
-{
-    font-size: 2.5rem;
-    font-weight: bold;
-    text-align: left;
-    color: var(--white);
-    margin-block-end: 0.75em;
-    text-align: center;
 }
 
 .content
