--- a/FrontBack/upload-numbers.css
+++ b/FrontBack/upload-numbers.css
@@ -33,6 +33,7 @@ main
     color: var(--white);
     padding: 3em;
 }
+
 .heading-container
 {
     display: grid;
@@ -41,6 +42,19 @@ main
     align-items: center;
     width: 100%;
     margin-block-end: 1rem;
+}
+
+.session-message
+{
+    text-align: center;
+    color: var(--white);
+    font-weight: bold;
+    margin-block: 1rem;
+    padding: 0.5rem 1rem;
+    background-color: var(--accent-color);
+    width: max-content;
+    margin-inline: auto;
+    border-radius: 4px;
 }
 
 .back-btn
