--- a/FrontBack/upload-numbers.css
+++ b/FrontBack/upload-numbers.css
@@ -20,7 +20,7 @@
 
 main
 {
-    background-image: url(images/upload-bill.jpg);
+    background-image: url(images/upload-bill.webp);
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 90svh;
