--- a/FrontBack/deactivate-cug.css
+++ b/FrontBack/deactivate-cug.css
@@ -1,6 +1,6 @@
 body
 {
-	background: url('images/deactivate-cug.jpg') no-repeat center center fixed;
+	background: url('images/deactivate-cug.webp') no-repeat center center fixed;
 	background-size: cover;
 	color: var(--white);
 }
