--- a/FrontBack/upload-bill.css
+++ b/FrontBack/upload-bill.css
@@ -1,25 +1,21 @@
 /* Header styles */
-.header-top
-{
+.header-top {
     background-color: #4c4caf;
     color: var(--white);
     padding: 1rem 0;
     text-align: center;
 }
 
-.header-top>h1
-{
+.header-top > h1 {
     margin: 0;
     font-size: 1.8rem;
 }
 
-.header-top :nth-child(1)
-{
+.header-top :nth-child(1) {
     text-transform: uppercase;
 }
 
-main
-{
+main {
     background-image: url(images/upload-bill.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -28,24 +24,20 @@ main
 }
 
 /* Services section */
-#create-dealer
-{
+#create-dealer {
     color: var(--white);
     padding: 3em;
 }
 
-#create-dealer h2
-{
+#create-dealer h2 {
     font-size: 2rem;
     margin-bottom: 1em;
     text-align: center;
     text-transform: uppercase;
-	text-shadow: 0 0 20px black;
+    text-shadow: 0 0 20px black;
 }
 
-
-.heading-container
-{
+.heading-container {
     display: grid;
     grid-template-columns: 2.5rem 1fr 2.5rem;
     justify-content: center;
@@ -54,8 +46,7 @@ main
     margin-block-end: 1rem;
 }
 
-.session-message
-{
+.session-message {
     text-align: center;
     color: var(--white);
     font-weight: bold;
@@ -67,8 +58,7 @@ main
     border-radius: 4px;
 }
 
-.back-btn
-{
+.back-btn {
     padding: 0.5rem;
     width: 2.5rem;
     border-radius: 999px;
@@ -78,9 +68,7 @@ main
     aspect-ratio: 1;
 }
 
-
-.heading
-{
+.heading {
     font-size: 2.5rem;
     font-weight: bold;
     text-align: left;
@@ -89,9 +77,7 @@ main
     justify-self: center;
 }
 
-
-.form_container
-{
+.form_container {
     position: relative;
     width: 70vw;
     margin-inline: auto;
@@ -105,24 +91,20 @@ main
     transition: background-color 500ms ease-in-out;
 }
 
-.form_container:is(:hover, :focus, :focus-within, :focus-visible)
-{
+.form_container:is(:hover, :focus, :focus-within, :focus-visible) {
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-.long-input
-{
+.long-input {
     grid-column: 1/3;
 }
 
-.input_box
-{
+.input_box {
     display: grid;
     gap: 0.5em;
 }
 
-.input_box label
-{
+.input_box label {
     color: var(--white);
     font-size: 1.25rem;
     font-weight: bold;
@@ -131,8 +113,7 @@ main
 
 input,
 textarea,
-select
-{
+select {
     font: inherit;
     padding: 0.5em;
     border: none;
@@ -140,13 +121,11 @@ select
     background-color: #eee;
 }
 
-.input_box input:is(:focus, :valid)
-{
+.input_box input:is(:focus, :valid) {
     outline: 2px solid var(--accent-color);
 }
 
-.submit-button
-{
+.submit-button {
     grid-column: 1/3;
     padding: 0.75em 2em;
     color: white;
@@ -155,35 +134,57 @@ select
     border-radius: 4px;
     margin-inline: auto;
     margin-block-start: 1rem;
-    background-image: linear-gradient(to right, var(--accent-color), var(--accent-color-hover), var(--accent-color) 80%);
+    background-image: linear-gradient(
+        to right,
+        var(--accent-color),
+        var(--accent-color-hover),
+        var(--accent-color) 80%
+    );
     background-size: 200%;
     cursor: pointer;
     transition: background-position 250ms ease-in-out;
     background-position: 0% 0%;
 }
 
-.submit-button:hover
-{
+.submit-button:hover {
     background-position: 100% 100%;
 }
 
 /* Footer styles */
-footer
-{
+footer {
     background-color: black;
     color: white;
     padding: 20px 0;
     text-align: center;
 }
 
-.footer-links a
-{
+.footer-links a {
     color: white;
     text-decoration: none;
     margin: 0 10px;
 }
 
-.footer-links a:hover
-{
+.footer-links a:hover {
     text-decoration: underline;
+}
+
+.message {
+    margin-top: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 1.2em;
+    text-align: center;
+    font-weight: bold;
+}
+.success {
+    color: white;
+    background-color: green;
+}
+.error {
+    color: whitesmoke;
+    background-color: red;
+    border: 1px solid red;
 }
