--- a/FrontBack/add-cug.css
+++ b/FrontBack/add-cug.css
@@ -1,5 +1,4 @@
-body
-{
+body {
     display: grid;
     place-content: center;
     min-height: 100vh;
@@ -7,13 +6,11 @@ body
     background-size: cover;
 }
 
-main
-{
+main {
     margin: 4rem;
 }
 
-.heading-container
-{
+.heading-container {
     display: grid;
     grid-template-columns: 2.5rem 1fr 2.5rem;
     justify-content: center;
@@ -22,8 +19,7 @@ main
     margin-block-end: 1rem;
 }
 
-.back-btn
-{
+.back-btn {
     padding: 0.5rem;
     width: 2.5rem;
     border: none;
@@ -33,9 +29,7 @@ main
     aspect-ratio: 1;
 }
 
-
-.heading
-{
+.heading {
     font-size: 2.5rem;
     font-weight: bold;
     text-align: left;
@@ -44,21 +38,19 @@ main
     justify-self: center;
 }
 
-.session-message
-{
+.session-message {
     text-align: center;
     color: var(--white);
     font-weight: bold;
     margin-block: 1rem;
     padding: 0.5rem 1rem;
-    background-color: var(--accent-color);
+    background-color: red;
     width: max-content;
     margin-inline: auto;
     border-radius: 4px;
 }
 
-.form_container
-{
+.form_container {
     position: relative;
     width: 70vw;
     margin-inline: auto;
@@ -72,31 +64,26 @@ main
     transition: background-color 500ms ease-in-out;
 }
 
-.form_container:is(:hover, :focus, :focus-within, :focus-visible)
-{
+.form_container:is(:hover, :focus, :focus-within, :focus-visible) {
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-.form_container>section,
-.long-input
-{
+.form_container > section,
+.long-input {
     grid-column: 1/3;
 }
 
-.content
-{
+.content {
     display: grid;
     gap: 2em;
 }
 
-.input_box
-{
+.input_box {
     display: grid;
     gap: 0.5em;
 }
 
-.input_box label
-{
+.input_box label {
     color: var(--white);
     font-size: 1.25rem;
     font-weight: bold;
@@ -105,8 +92,7 @@ main
 
 input,
 textarea,
-select
-{
+select {
     font: inherit;
     padding: 0.5em;
     border: none;
@@ -114,13 +100,11 @@ select
     background-color: #eee;
 }
 
-.input_box input:is(:focus, :valid)
-{
+.input_box input:is(:focus, :valid) {
     outline: 2px solid var(--accent-color);
 }
 
-.submit-button
-{
+.submit-button {
     grid-column: 1/3;
     padding: 0.75em 2em;
     color: white;
@@ -128,20 +112,27 @@ select
     border: none;
     border-radius: 4px;
     margin: auto;
-    background-image: linear-gradient(to right, var(--accent-color), var(--accent-color-hover), var(--accent-color) 80%);
+    background-image: linear-gradient(
+        to right,
+        var(--accent-color),
+        var(--accent-color-hover),
+        var(--accent-color) 80%
+    );
     background-size: 200%;
     cursor: pointer;
     transition: background-position 250ms ease-in-out;
     background-position: 0% 0%;
 }
 
-.submit-button:hover
-{
+.submit-button:hover {
     background-position: 100% 100%;
 }
 
-.selected-option
-{
+.selected-option {
     outline: 4px solid var(--accent-color);
-    background-color: color-mix(in lab, var(--accent-color-hover) 20%, white) !important;
+    background-color: color-mix(
+        in lab,
+        var(--accent-color-hover) 20%,
+        white
+    ) !important;
 }
