--- a/FrontBack/add-cug.css
+++ b/FrontBack/add-cug.css
@@ -1,4 +1,5 @@
-body {
+body
+{
     display: grid;
     place-content: center;
     min-height: 100vh;
@@ -6,11 +7,44 @@ body {
     background-size: cover;
 }
 
-main {
+/* Header styles */
+.header-top
+{
+    --bgc: #4c4caf;
+    background-color: #4c4caf;
+    box-shadow: 0 0 0 100vmax var(--bgc);
+    clip-path: inset(0 -100vmax);
+    padding: 1rem 0;
+    text-align: center;
+}
+
+.header-top a
+{
+    text-decoration: none !important;
+
+}
+
+.header-top h1
+{
+    margin: 0;
+    font-size: 1.8rem;
+    text-transform: none;
+    color: white !important;
+    font-weight: bold;
+}
+
+.header-top :nth-child(1)
+{
+    text-transform: uppercase;
+}
+
+main
+{
     margin: 4rem;
 }
 
-.heading-container {
+.heading-container
+{
     display: grid;
     grid-template-columns: 2.5rem 1fr 2.5rem;
     justify-content: center;
@@ -19,7 +53,8 @@ main {
     margin-block-end: 1rem;
 }
 
-.back-btn {
+.back-btn
+{
     padding: 0.5rem;
     width: 2.5rem;
     border: none;
@@ -29,7 +64,8 @@ main {
     aspect-ratio: 1;
 }
 
-.heading {
+.heading
+{
     font-size: 2.5rem;
     font-weight: bold;
     text-align: left;
@@ -38,7 +74,8 @@ main {
     justify-self: center;
 }
 
-.session-message {
+.session-message
+{
     text-align: center;
     color: var(--white);
     font-weight: bold;
@@ -50,7 +87,8 @@ main {
     border-radius: 4px;
 }
 
-.form_container {
+.form_container
+{
     position: relative;
     width: 70vw;
     margin-inline: auto;
@@ -64,26 +102,31 @@ main {
     transition: background-color 500ms ease-in-out;
 }
 
-.form_container:is(:hover, :focus, :focus-within, :focus-visible) {
+.form_container:is(:hover, :focus, :focus-within, :focus-visible)
+{
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-.form_container > section,
-.long-input {
+.form_container>section,
+.long-input
+{
     grid-column: 1/3;
 }
 
-.content {
+.content
+{
     display: grid;
     gap: 2em;
 }
 
-.input_box {
+.input_box
+{
     display: grid;
     gap: 0.5em;
 }
 
-.input_box label {
+.input_box label
+{
     color: var(--white);
     font-size: 1.25rem;
     font-weight: bold;
@@ -92,7 +135,8 @@ main {
 
 input,
 textarea,
-select {
+select
+{
     font: inherit;
     padding: 0.5em;
     border: none;
@@ -100,11 +144,13 @@ select {
     background-color: #eee;
 }
 
-.input_box input:is(:focus, :valid) {
+.input_box input:is(:focus, :valid)
+{
     outline: 2px solid var(--accent-color);
 }
 
-.submit-button {
+.submit-button
+{
     grid-column: 1/3;
     padding: 0.75em 2em;
     color: white;
@@ -112,27 +158,25 @@ select {
     border: none;
     border-radius: 4px;
     margin: auto;
-    background-image: linear-gradient(
-        to right,
-        var(--accent-color),
-        var(--accent-color-hover),
-        var(--accent-color) 80%
-    );
+    background-image: linear-gradient(to right,
+            var(--accent-color),
+            var(--accent-color-hover),
+            var(--accent-color) 80%);
     background-size: 200%;
     cursor: pointer;
     transition: background-position 250ms ease-in-out;
     background-position: 0% 0%;
 }
 
-.submit-button:hover {
+.submit-button:hover
+{
     background-position: 100% 100%;
 }
 
-.selected-option {
+.selected-option
+{
     outline: 4px solid var(--accent-color);
-    background-color: color-mix(
-        in lab,
-        var(--accent-color-hover) 20%,
-        white
-    ) !important;
+    background-color: color-mix(in lab,
+            var(--accent-color-hover) 20%,
+            white) !important;
 }
