--- a/FrontBack/create-dealer.css
+++ b/FrontBack/create-dealer.css
@@ -2,15 +2,22 @@
 .header-top
 {
     background-color: #4c4caf;
-    color: var(--white);
     padding: 1rem 0;
     text-align: center;
 }
 
-.header-top>h1
+.header-top a
+{
+    text-decoration: none !important;
+
+}
+
+.header-top h1
 {
     margin: 0;
     font-size: 1.8rem;
+    text-transform: none;
+    color: white !important;
 }
 
 .header-top :nth-child(1)
